--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm-run-all shopify:dev vite:dev",
+    "dev": "concurrently \"npm run symlinks\" \"npm run shopify:dev\" \"npm run vite:dev\"",
     "deploy": "npm-run-all vite:build shopify:push",
-    "shopify:dev": "shopify theme dev",
+    "symlinks": "echo 'running symlinks' && node symlinks.js",
+    "shopify:dev": "echo 'running shopify theme push' && shopify theme dev",
     "shopify:push": "shopify theme push",
-    "vite:dev": "vite",
+    "vite:dev": "echo 'running vite' && vite",
     "vite:build": "vite build"
   },
   "author": "",
@@ -17,11 +18,15 @@
   "devDependencies": {
     "@shopify/cli": "^3.61.2",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.13",
     "vite-plugin-shopify": "^3.0.1"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "chokidar": "^3.6.0"
+  }
 }
