fixed symlinks to create a more controlled, event-driven synchronization process, also refactored to use a set and promises to reduce wait times. Created the sections and snippets for the home, plp and pdp. Added swiper, and set up conditional functionality for pdp. Design from BYLT Basics since that’s where I got the free assets from https://byltbasics.com/

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "type": "module",
   "dependencies": {
-    "chokidar": "^3.6.0"
+    "chokidar": "^3.6.0",
+    "swiper": "^11.1.9"
   }
 }
