--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run symlinks\" \"npm run shopify:dev\" \"npm run vite:dev\"",
+    "dev": "concurrently \"npm run symlinks\" \"npm run vite:dev\" \"npm run shopify:dev\"",
     "deploy": "npm-run-all vite:build shopify:push",
     "symlinks": "echo 'running symlinks' && node symlinks.js",
     "shopify:dev": "echo 'running shopify theme push' && shopify theme dev",
@@ -19,6 +19,7 @@
   "description": "",
   "devDependencies": {
     "@shopify/cli": "^3.61.2",
+    "@vituum/vite-plugin-liquid": "^1.1.0",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "npm-run-all": "^4.1.5",
