fixed package.json so pulling templates and settings_data when an admin makes updates in shopify editor will not conflict with npm run dev

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,5 +1,39 @@
 {
   "current": {
+    "sections": {
+      "header": {
+        "type": "header",
+        "settings": {
+          "background_color": "#ffffff",
+          "text_color": "#000000"
+        }
+      },
+      "promotions": {
+        "type": "promotions",
+        "blocks": {
+          "promotion_K9VAz9": {
+            "type": "promotion",
+            "settings": {
+              "key": "welcome",
+              "title": "Welcome",
+              "message": "welcome message",
+              "utm_medium": "welcome",
+              "discountCode": "",
+              "isActive": true,
+              "condition": ""
+            }
+          }
+        },
+        "block_order": [
+          "promotion_K9VAz9"
+        ],
+        "settings": {
+        }
+      }
+    },
+    "content_for_index": [
+
+    ]
   },
   "presets": {
     "Default": {
