Created customer object for state management for recording which promotions the user has interacted with, stored as a map at customer.promotionHistory and listens to promotion-related events from modal.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "shopify:pull": "shopify theme pull",
     "vite:dev": "echo 'running vite' && vite",
     "vite:build": "vite build",
-    "pull": "npm run shopify:pull -- --only=templates config/settings_data.json"
+    "pull": "npm run shopify:pull -- --only=templates config/settings_data.json",
+    "server": "node server/index.js"
   },
   "author": "",
   "license": "ISC",
