--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
   "type": "module",
   "dependencies": {
     "chokidar": "^3.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
     "swiper": "^11.1.9"
   }
 }
