styling updates before integrations refactor

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -111,11 +111,12 @@
               "background_color": "#25293b",
               "header_color": "#ffffff",
               "body_color": "#ffffff",
+              "modal_body_background": "rgba(255, 255, 255, 0)",
               "cta_copy": "",
               "cta_url": "",
               "cta_color": "#000000",
               "cta_text_color": "#ffffff",
-              "dismissedCount": 1
+              "dismissedCount": 0
             }
           },
           "modal_cdMQmi": {
@@ -132,6 +133,7 @@
               "background_color": "#ffffff",
               "header_color": "#000000",
               "body_color": "#000000",
+              "modal_body_background": "rgba(255, 255, 255, 0)",
               "cta_copy": "",
               "cta_url": "",
               "cta_color": "#000000",
@@ -152,6 +154,7 @@
               "background_color": "#25293b",
               "header_color": "#ffffff",
               "body_color": "#ffffff",
+              "modal_body_background": "rgba(255, 255, 255, 0)",
               "cta_copy": "Look At This",
               "cta_url": "shopify:\/\/products\/coastal-trucker-jacket",
               "cta_color": "#000000",
@@ -172,6 +175,7 @@
               "background_color": "#ffffff",
               "header_color": "#000000",
               "body_color": "#000000",
+              "modal_body_background": "rgba(255, 255, 255, 0)",
               "cta_copy": "Shop",
               "cta_url": "shopify:\/\/collections\/joggers",
               "cta_color": "#25293b",
@@ -180,20 +184,21 @@
           },
           "modal_kc4gF7": {
             "type": "modal",
-            "disabled": true,
             "settings": {
               "select_type": "promo",
               "promo_key": "deal10_discount",
-              "location_type": "###",
-              "modal_size": "regular",
-              "header_copy": "",
-              "header_position": "left",
-              "body_copy": "",
+              "location_type": "",
+              "modal_size": "fullscreen",
+              "header_copy": "BYLT Basics",
+              "header_position": "center",
+              "body_copy": "<h5>Lock in <strong>10% Off!<\/strong><br\/>Share who you're shopping for to activate your discount<\/h5>",
+              "background_image": "shopify:\/\/shop_images\/priscilla-du-preez-DqJMxq5ZDqA-unsplash.jpg",
               "background_color": "#ffffff",
-              "header_color": "#000000",
-              "body_color": "#000000",
-              "cta_copy": "",
-              "cta_url": "",
+              "header_color": "#ffffff",
+              "body_color": "#ffffff",
+              "modal_body_background": "rgba(0, 0, 0, 0.5)",
+              "cta_copy": "Shop now",
+              "cta_url": "shopify:\/\/products\/lux-relaxed-tee",
               "cta_color": "#000000",
               "cta_text_color": "#ffffff"
             }
@@ -212,6 +217,7 @@
               "background_color": "#d93a3a",
               "header_color": "#ffffff",
               "body_color": "#ffffff",
+              "modal_body_background": "rgba(255, 255, 255, 0)",
               "cta_copy": "",
               "cta_url": "",
               "cta_color": "#000000",
