attempt to reverse the symlink process on npm run dev termination to build to a store

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run symlinks\" \"npm run vite:dev\" \"npm run shopify:dev\"",
-    "deploy": "npm-run-all vite:build shopify:push",
+    "deploy": "npm-run-all npm run reverse-symlinks vite:build shopify:push",
     "symlinks": "echo 'running symlinks' && node symlinks.js",
+    "reverse-symlinks": "echo 'running reverse-symlinks' && node reverse-symlinks.js",
     "shopify:dev": "echo 'running shopify theme push' && shopify theme dev",
     "shopify:push": "shopify theme push",
     "shopify:pull": "shopify theme pull",
+    "share": "npm-run-all npm run reverse-symlinks shopify theme share",
     "vite:dev": "echo 'running vite' && vite",
     "vite:build": "vite build",
     "pull": "npm run shopify:pull -- --only=templates config/settings_data.json",
