--- a/assets/.vite/manifest.json
+++ b/assets/.vite/manifest.json
@@ -1,13 +1,16 @@
 {
   "frontend/entrypoints/main.css": {
-    "file": "main-BMTRAcdn.css",
+    "file": "styles-DqE3qaRY.css",
     "src": "frontend/entrypoints/main.css",
     "isEntry": true
   },
   "frontend/entrypoints/main.js": {
-    "file": "main-B5Qt9EMX.js",
+    "file": "main-BDJRnTnL.js",
     "name": "main",
     "src": "frontend/entrypoints/main.js",
-    "isEntry": true
+    "isEntry": true,
+    "css": [
+      "main-Dkka_zoG.css"
+    ]
   }
 }
