tested by updaing schema for existing sections. tested with the creation and manipulation of new article component. tested pull admin settings for article component. tested deploying to live current theme.

--- a/assets/.vite/manifest.json
+++ b/assets/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "frontend/entrypoints/main.css": {
-    "file": "styles-DqE3qaRY.css",
+    "file": "styles-BYO1ySGu.css",
     "src": "frontend/entrypoints/main.css",
     "isEntry": true
   },
